test/semantics/programs/valid/dictionary-access.guav
# Should analyze successfully since b has type dictionary and y has type string

b = {one: 1, two: 2, three: 3}
print(b.two)
