test/semantics/programs/invalid/reassign-wrong-type3.guav
# Should fail since static typing

z = [1, 2, 3]
z = {one: 1, two: 2, three: 3}
